--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Bootstrap, Parallax, Template, Registration, Landing">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
-    <title>Mate - Parallax Website Template</title>
+    <title>Pulse Taekwon-Do</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -28,7 +28,7 @@
     <!-- Header Section Start -->
     <header id="hero-area" data-stellar-background-ratio="0.5">    
       <!-- Navbar Start -->
-      <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar indigo">
+      <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
@@ -58,9 +58,6 @@
                 <a class="nav-link page-scroll" href="#team">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#blog">Blog</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link page-scroll" href="#contact">Contact</a>
               </li>
             </ul>
@@ -87,9 +84,6 @@
             <li>
               <a class="page-scroll" href="#team">Team</a>
             </li>
-            <li >
-              <a class="page-scroll" href="#blog">Blog</a>
-            </li>
             <li>
               <a class="page-scroll" href="#contact">Contact</a>
             </li>
@@ -102,9 +96,9 @@
         <div class="row justify-content-md-center">
           <div class="col-md-10">
             <div class="contents text-center">
-              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Mate - Free Parallax Website Template</h1>
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-              <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Download</a>
+              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Pulse Taekwon-Do</h1>
+              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms"></p>
+              <!-- <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Download</a> -->
             </div>
           </div>
         </div> 
@@ -118,34 +112,34 @@
         <div class="section-header">          
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Our Services</h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
+          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Pulse Taekwon-Do is a Christchurch based martial arts club<br>alliliated to International Taekwon-Do.</p>
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
               <div class="icon">
-                <i class="lnr lnr-pencil"></i>
+                <i class="fa fa-paw"></i>
               </div>
-              <h4>Content Writing</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <h4>Kubs</h4>
+              <p>Our TKD Kubz programme is a specially designed class for children aged between 3-6 years of age.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
               <div class="icon">
-                <i class="lnr lnr-code"></i>
+                <i class="fa fa-child"></i>
               </div>
-              <h4>Web Development</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <h4>Mini Kids</h4>
+              <p>Junior Taekwon-Do programme for children aged between 5-9 years of age.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="1.2s">
               <div class="icon">
-                <i class="lnr lnr-mustache"></i>
+                <i class="fa fa-male"></i>
               </div>
-              <h4>Business Consultancy</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <h4>Youth / Adults</h4>
+              <p>No matter what your current fitness level, our instructors are trained to give you safe and enjoyable tuition.</p>
             </div>
           </div>
         </div>
@@ -331,27 +325,27 @@
     <!-- Start Pricing Table Section -->
     <div id="pricing" class="section pricing-section">
       <div class="container">
-        <div class="section-header">          
+        <div class="section-header">
           <h2 class="section-title">Pricing Table</h2>
           <hr class="lines">
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
+          <p class="section-subtitle">First two weeks free, with no obligation or cost, to see if Taekwon-Do is for you before you pay a cent, so come along and check it out!</p>
         </div>
 
         <div class="row pricing-tables">
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table">
               <div class="pricing-details">
-                <h2>Free</h2>
-                <span>$00</span>
+                <h2>Individual</h2>
+                <span>$65</span>
                 <ul>
-                  <li>Consectetur adipiscing</li>
+                  <li>Monthly</li>
                   <li>Nunc luctus nulla et tellus</li>
                   <li>Suspendisse quis metus</li>
                   <li>Vestibul varius fermentum erat</li>
                 </ul>
               </div>
               <div class="plan-button">
-                <a href="#" class="btn btn-common">Get Plan</a>
+                <!-- <a href="#" class="btn btn-common">Get Plan</a> -->
               </div>
             </div>
           </div>
@@ -359,17 +353,17 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table">
               <div class="pricing-details">
-                <h2>Popular</h2>
-                <span>$3.99</span>
+                <h2>2 Person</h2>
+                <span>$120</span>
                 <ul>
-                  <li>Consectetur adipiscing</li>
+                  <li>Monthly</li>
                   <li>Nunc luctus nulla et tellus</li>
                   <li>Suspendisse quis metus</li>
                   <li>Vestibul varius fermentum erat</li>
                 </ul>
               </div>
               <div class="plan-button">
-                <a href="#" class="btn btn-common">Buy Now</a>
+                <!-- <a href="#" class="btn btn-common">Buy Now</a> -->
               </div>
             </div>
           </div>
@@ -377,21 +371,23 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table">
               <div class="pricing-details">
-                <h2>Premium</h2>
-                <span>$9.50</span>
+                <h2>3 or more</h2>
+                <span>$155</span>
                 <ul>
-                  <li>Consectetur adipiscing</li>
-                  <li>Nunc luctus nulla et tellus</li>
-                  <li>Suspendisse quis metus</li>
-                  <li>Vestibul varius fermentum erat</li>
+                  <li>Monthly</li>
+                  <li>Ideal for Families</li>
                 </ul>
               </div>
               <div class="plan-button">
-                <a href="#" class="btn btn-common">Buy Now</a>
+                <!-- <a href="#" class="btn btn-common">Buy Now</a> -->
               </div>
             </div>
           </div>
 
+        </div>
+        <div class="section-header">
+          <p class="section-subtitle">Joining Fee - Individual - $70 - 2 person - $120 - Family - $170</p>
+          <p class="section-subtitle">A $10 discount is also available for holders of a Community Services Card and Tertiary Students</p>
         </div>
       </div>
     </div>
@@ -577,95 +573,6 @@
     </div>
     <!-- testimonial Section Start -->
 
-    <!-- Blog Section -->
-    <section id="blog" class="section">
-      <!-- Container Starts -->
-      <div class="container">
-        <div class="section-header">          
-          <h2 class="section-title">Recent Blog</h2>
-          <hr class="lines">
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
-            <!-- Blog Item Starts -->
-            <div class="blog-item-wrapper">
-              <div class="blog-item-img">
-                <a href="single-post.html">
-                  <img src="img/blog/img1.jpg" alt="">
-                </a>                
-              </div>
-              <div class="blog-item-text"> 
-                <div class="meta-tags">
-                  <span class="date"><i class="lnr  lnr-clock"></i>2 Days Ago</span>
-                  <span class="comments"><a href="#"><i class="lnr lnr-bubble"></i> 24 Comments</a></span>
-                </div>
-                <h3>
-                  <a href="single-post.html">How often should you tweet?</a>
-                </h3>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... 
-                </p>
-                <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
-              </div>
-            </div>
-            <!-- Blog Item Wrapper Ends-->
-          </div>
-
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
-            <!-- Blog Item Starts -->
-            <div class="blog-item-wrapper">
-              <div class="blog-item-img">
-                <a href="single-post.html">
-                  <img src="img/blog/img2.jpg" alt="">
-                </a>                
-              </div>
-              <div class="blog-item-text"> 
-                <div class="meta-tags">
-                  <span class="date"><i class="lnr  lnr-clock"></i>2 Days Ago</span>
-                  <span class="comments"><a href="#"><i class="lnr lnr-bubble"></i> 24 Comments</a></span>
-                </div>
-                <h3>
-                  <a href="single-post.html">Content is still king</a>
-                </h3>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... 
-                </p>
-                <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
-              </div>
-            </div>
-            <!-- Blog Item Wrapper Ends-->
-          </div>
-
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
-            <!-- Blog Item Starts -->
-            <div class="blog-item-wrapper">
-              <div class="blog-item-img">
-                <a href="single-post.html">
-                  <img src="img/blog/img3.jpg" alt="">
-                </a>                
-              </div>
-              <div class="blog-item-text"> 
-                <div class="meta-tags">
-                  <span class="date"><i class="lnr  lnr-clock"></i>2 Days Ago</span>
-                  <span class="comments"><a href="#"><i class="lnr lnr-bubble"></i> 24 Comments</a></span>
-                </div> 
-                <h3>
-                  <a href="single-post.html">Social media at work</a>
-                </h3>
-                <p>
-                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... 
-                </p>
-                <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
-              </div>
-            </div>
-            <!-- Blog Item Wrapper Ends-->
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- blog Section End -->
-
     <!-- Contact Section Start -->
     <section id="contact" class="section" data-stellar-background-ratio="-0.2">      
       <div class="contact-form">
@@ -673,19 +580,19 @@
           <div class="row">     
             <div class="col-lg-6 col-sm-6 col-xs-12">
               <div class="contact-us">
-                <h3>Contact With us</h3>
+                <h3>Contact us</h3>
                 <div class="contact-address">
-                  <p>Centerville Road, DE 19808, US </p>
-                  <p class="phone">Phone: <span>(+94 123 456 789)</span></p>
-                  <p class="email">E-mail: <span>(contact@mate.com)</span></p>
+                  <p>Casebrook Intermediate, 90 Veitches Road, Christchurch </p>
+                  <p class="phone">Phone: <span>(03 929 0067)</span></p>
+                  <p class="email">E-mail: <span>(info@pulsetkd.co.nz)</span></p>
                 </div>
                 <div class="social-icons">
                   <ul>
-                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li class="dribbble"><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                    <li class="facebook"><a href="https://www.facebook.com/pulsetkd/"><i class="fa fa-facebook"></i></a></li>
+                    <!-- <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+                    <!-- <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
+                    <!-- <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
+                    <!-- <li class="dribbble"><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
                   </ul>
                 </div>
               </div>
@@ -750,7 +657,7 @@
           </div>
           <div class="col-lg-6 col-sm-6 col-xs-12">
             <div class="copyright">
-              <p>All copyrights reserved &copy; 2018 - Designed & Developed by <a rel="nofollow" href="https://uideck.com">UIdeck</a></p>
+              <!-- <p>All copyrights reserved &copy; 2018 - Designed & Developed by <a rel="nofollow" href="https://uideck.com">UIdeck</a></p> -->
             </div>
           </div>  
         </div>
