adjustment to be more general

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Bootstrap, Parallax, Template, Registration, Landing">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
-    <title>Pulse Taekwon-Do</title>
+    <title>Pulse Taining For Life</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -96,7 +96,7 @@
         <div class="row justify-content-md-center">
           <div class="col-md-10">
             <div class="contents text-center">
-              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Pulse Taekwon-Do</h1>
+              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Pulse Training For Life</h1>
               <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms"></p>
               <!-- <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Download</a> -->
             </div>
@@ -114,7 +114,7 @@
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
           <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Pulse Taekwon-Do is a Christchurch based martial arts club<br>alliliated to International Taekwon-Do.</p>
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
               <div class="icon">
@@ -129,7 +129,7 @@
               <div class="icon">
                 <i class="fa fa-child"></i>
               </div>
-              <h4>Mini Kids</h4>
+              <h4>Kids</h4>
               <p>Junior Taekwon-Do programme for children aged between 5-9 years of age.</p>
             </div>
           </div>
@@ -139,6 +139,24 @@
                 <i class="fa fa-male"></i>
               </div>
               <h4>Youth / Adults</h4>
+              <p>No matter what your current fitness level, our instructors are trained to give you safe and enjoyable tuition.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6">
+            <div class="item-boxes wow fadeInDown" data-wow-delay="1.6s">
+              <div class="icon">
+                <i class="fa fa-male"></i>
+              </div>
+              <h4>Personal Training</h4>
+              <p>No matter what your current fitness level, our instructors are trained to give you safe and enjoyable tuition.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6">
+            <div class="item-boxes wow fadeInDown" data-wow-delay="2.0s">
+              <div class="icon">
+                <i class="fa fa-male"></i>
+              </div>
+              <h4>Self Defence</h4>
               <p>No matter what your current fitness level, our instructors are trained to give you safe and enjoyable tuition.</p>
             </div>
           </div>
@@ -224,14 +242,14 @@
               <a class="filter active btn btn-common" data-filter="all">
                 All
               </a>
-              <a class="filter btn btn-common" data-filter=".design">
-                Design
+              <a class="filter btn btn-common" data-filter=".tkd">
+                Taekwon-Do
               </a>
-              <a class="filter btn btn-common" data-filter=".development">
-                Development
+              <a class="filter btn btn-common" data-filter=".personal">
+                Personal Training
               </a>
-              <a class="filter btn btn-common" data-filter=".print">
-                Print
+              <a class="filter btn btn-common" data-filter=".self">
+                Self Defence
               </a>
             </div>
             <!-- Portfolio Controller/Buttons Ends-->
@@ -239,7 +257,7 @@
 
           <!-- Portfolio Recent Projects -->
           <div id="portfolio" class="row">
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development print">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix tkd">
               <div class="portfolio-item">
                 <div class="shot-item">
                   <img src="img/portfolio/img1.jpg" alt="" />
@@ -249,7 +267,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix design print">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix tkd">
               <div class="portfolio-item">
                 <div class="shot-item">
                   <img src="img/portfolio/img2.jpg" alt="" />
@@ -259,7 +277,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix self">
               <div class="portfolio-item">
                 <div class="shot-item">
                   <img src="img/portfolio/img3.jpg" alt="" />
@@ -269,7 +287,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development design">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix self">
               <div class="portfolio-item">
                 <div class="shot-item">
                   <img src="img/portfolio/img4.jpg" alt="" />
@@ -279,7 +297,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix personal">
               <div class="portfolio-item">
                 <div class="shot-item">
                   <img src="img/portfolio/img5.jpg" alt="" />
@@ -289,7 +307,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix print design">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix personal">
               <div class="portfolio-item">
                 <div class="shot-item">
                   <img src="img/portfolio/img6.jpg" alt="" />
