update service icons, remove counter, add team data

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="1.6s">
               <div class="icon">
-                <i class="fa fa-male"></i>
+                <i class="fa fa-bullhorn"></i>
               </div>
               <h4>Personal Training</h4>
               <p>No matter what your current fitness level, our instructors are trained to give you safe and enjoyable tuition.</p>
@@ -154,7 +154,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="2.0s">
               <div class="icon">
-                <i class="fa fa-male"></i>
+                <i class="fa fa-shield"></i>
               </div>
               <h4>Self Defence</h4>
               <p>No matter what your current fitness level, our instructors are trained to give you safe and enjoyable tuition.</p>
@@ -413,59 +413,6 @@
     </div>
     <!-- End Pricing Table Section -->
 
-    <!-- Counter Section Start -->
-    <div class="counters section" data-stellar-background-ratio="0.5">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="facts-item">
-              <div class="icon">
-                <i class="lnr lnr-clock"></i>
-              </div>
-              <div class="fact-count">
-                <h3><span class="counter">1589</span></h3>
-                <h4>Working Hours</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="facts-item">
-              <div class="icon">
-                <i class="lnr lnr-briefcase"></i>
-              </div>
-              <div class="fact-count">
-                <h3><span class="counter">699</span></h3>
-                <h4>Completed Projects</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="facts-item">
-              <div class="icon">
-                <i class="lnr lnr-user"></i>
-              </div>
-              <div class="fact-count">
-                <h3><span class="counter">203</span></h3>
-                <h4>No. of Clients</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="facts-item">
-              <div class="icon">
-                <i class="lnr lnr-heart"></i>
-              </div>
-              <div class="fact-count">
-                <h3><span class="counter">1689</span></h3>
-                <h4>Peoples Love</h4>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Counter Section End -->
-
     <!-- Team section Start -->
     <section id="team" class="section">
       <div class="container">
@@ -480,14 +427,8 @@
               <img src="img/team/team1.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
-                  <h4 class="team-title">Jhon Doe</h4>
-                  <p>Chief Technical Officer</p>
-                  <ul class="social-list">
-                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                  </ul>
+                  <h4 class="team-title">Angela Oliver</h4>
+                  <p>Founder</p>
                 </div>
               </div>
             </div>
@@ -497,14 +438,8 @@
               <img src="img/team/team2.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
-                  <h4 class="team-title">Paul Kowalsy</h4>
-                  <p>CEO & Co-Founder</p>
-                  <ul class="social-list">
-                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                  </ul>
+                  <h4 class="team-title">Helen Caley</h4>
+                  <p>Instructor</p>
                 </div>
               </div>
             </div>
@@ -514,14 +449,8 @@
               <img src="img/team/team3.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
-                  <h4 class="team-title">Emilly Williams</h4>
-                  <p>Business Manager</p>
-                  <ul class="social-list">
-                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                  </ul>
+                  <h4 class="team-title">Craig Oliver</h4>
+                  <p>Instructor</p>
                 </div>
               </div>
             </div>
@@ -531,14 +460,8 @@
               <img class="img-fulid" src="img/team/team4.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
-                  <h4 class="team-title">Patricia Green</h4>
-                  <p>Graphic Designer</p>
-                  <ul class="social-list">
-                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                  </ul>
+                  <h4 class="team-title">Luke Jackson</h4>
+                  <p>Instructor</p>
                 </div>
               </div>
             </div>
