--- a/index.html
+++ b/index.html
@@ -625,6 +625,7 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.mixitup.js"></script>
+    <script src="js/modernizr-custom.js"></script>
     <script src="js/nivo-lightbox.js"></script>
     <script src="js/owl.carousel.js"></script>
     <script src="js/jquery.stellar.min.js"></script>
