--- a/index.html
+++ b/index.html
@@ -260,6 +260,8 @@
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix tkd">
               <div class="portfolio-item">
                 <div class="shot-item">
+                  <source srcset="img/portfolio/img1.webp" type="image/webp">
+                  <source srcset="img/portfolio/img1.jpg" type="image/jpeg">
                   <img src="img/portfolio/img1.jpg" alt="" />
                   <a class="overlay lightbox" href="img/portfolio/img1.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -270,6 +272,8 @@
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix tkd">
               <div class="portfolio-item">
                 <div class="shot-item">
+                  <source srcset="img/portfolio/img2.webp" type="image/webp">
+                  <source srcset="img/portfolio/img2.jpg" type="image/jpeg">
                   <img src="img/portfolio/img2.jpg" alt="" />
                   <a class="overlay lightbox" href="img/portfolio/img2.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -280,6 +284,8 @@
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix self">
               <div class="portfolio-item">
                 <div class="shot-item">
+                  <source srcset="img/portfolio/img3.webp" type="image/webp">
+                  <source srcset="img/portfolio/img3.jpg" type="image/jpeg">
                   <img src="img/portfolio/img3.jpg" alt="" />
                   <a class="overlay lightbox" href="img/portfolio/img3.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -290,6 +296,8 @@
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix self">
               <div class="portfolio-item">
                 <div class="shot-item">
+                  <source srcset="img/portfolio/img4.webp" type="image/webp">
+                  <source srcset="img/portfolio/img4.jpg" type="image/jpeg">
                   <img src="img/portfolio/img4.jpg" alt="" />
                   <a class="overlay lightbox" href="img/portfolio/img4.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -300,6 +308,8 @@
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix personal">
               <div class="portfolio-item">
                 <div class="shot-item">
+                  <source srcset="img/portfolio/img5.webp" type="image/webp">
+                  <source srcset="img/portfolio/img5.jpg" type="image/jpeg">
                   <img src="img/portfolio/img5.jpg" alt="" />
                   <a class="overlay lightbox" href="img/portfolio/img5.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -310,6 +320,8 @@
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix personal">
               <div class="portfolio-item">
                 <div class="shot-item">
+                  <source srcset="img/portfolio/img6.webp" type="image/webp">
+                  <source srcset="img/portfolio/img6.jpg" type="image/jpeg">
                   <img src="img/portfolio/img6.jpg" alt="" />
                   <a class="overlay lightbox" href="img/portfolio/img6.jpg">
                     <i class="lnr lnr-eye item-icon"></i>
@@ -424,6 +436,8 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
+              <source srcset="img/team/team1.webp" type="image/webp">
+              <source srcset="img/team/team1.jpg" type="image/jpeg">
               <img src="img/team/team1.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
@@ -435,6 +449,8 @@
           </div>
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
+              <source srcset="img/team/team2.webp" type="image/webp">
+              <source srcset="img/team/team2.jpg" type="image/jpeg">
               <img src="img/team/team2.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
@@ -446,6 +462,8 @@
           </div>
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
+              <source srcset="img/team/team3.webp" type="image/webp">
+              <source srcset="img/team/team3.jpg" type="image/jpeg">
               <img src="img/team/team3.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
@@ -457,6 +475,8 @@
           </div>
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
+              <source srcset="img/team/team4.webp" type="image/webp">
+              <source srcset="img/team/team4.jpg" type="image/jpeg">
               <img class="img-fulid" src="img/team/team4.jpg" alt="">
               <div class="team-details">
                 <div class="team-inner">
@@ -478,6 +498,8 @@
           <div class="col-md-12">
             <div class="touch-slider owl-carousel owl-theme">
               <div class="testimonial-item">
+                <source srcset="img/testimonial/customer1.webp" type="image/webp">
+                <source srcset="img/testimonial/customer1.jpg" type="image/jpeg">
                 <img src="img/testimonial/customer1.jpg" alt="Client Testimonoal" />
                 <div class="testimonial-text">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
@@ -486,6 +508,8 @@
                 </div>
               </div>
               <div class="testimonial-item">
+                <source srcset="img/testimonial/customer2.webp" type="image/webp">
+                <source srcset="img/testimonial/customer2.jpg" type="image/jpeg">
                 <img src="img/testimonial/customer2.jpg" alt="Client Testimonoal" />
                 <div class="testimonial-text">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
@@ -494,6 +518,8 @@
                 </div>
               </div>
               <div class="testimonial-item">
+                <source srcset="img/testimonial/customer3.webp" type="image/webp">
+                <source srcset="img/testimonial/customer3.jpg" type="image/jpeg">
                 <img src="img/testimonial/customer3.jpg" alt="Client Testimonoal" />
                 <div class="testimonial-text">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
@@ -502,6 +528,8 @@
                 </div>
               </div>
               <div class="testimonial-item">
+                <source srcset="img/testimonial/customer4.webp" type="image/webp">
+                <source srcset="img/testimonial/customer4.jpg" type="image/jpeg"> 
                 <img src="img/testimonial/customer4.jpg" alt="Client Testimonoal" />
                 <div class="testimonial-text">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
